# ionvm

./: .gitignore  BYTECODE.md  Cargo.toml  IONPACK.md  LICENSE  PROJECT_SUMMARY.md  README.md  actors.ionpack  bytecode.md  comparison_test.ionpack  complex.ionpack  control_flow_test.ionpack  fibonacci_020.ion  hello.ionpack  history.txt  improved_control_flow_demo.ionpack  improved_control_flow_demo.py  main.ionpack  python_actors.ionpack  simple_control_flow_demo.py  simple_test.ionpack  test.ion  test.ionc  test_closure_instr.py  test_comparison.py  test_control_flow.py  test_improved_control_flow.py  test_simple.py  unified-actors.ionpack
codeql-custom-queries-rust/: codeql-pack.lock.yml  codeql-pack.yml  example.ql
docs/: API_REFERENCE.md  ARCHITECTURE.md
intrm/: float_binary  float_binary.rs  float_by_zero  float_by_zero.rs  ssl.rs  unsafe_main.rs
intrm/ssl/: 01.pem  Cargo.toml  ca.crt  ca.key  cert.pem  key.pem  localhost.csr  localhost.key  localhost.pem  localhost.pfx  sserv.py  ssl.conf
intrm/ssl/demoCA/: index.txt
intrm/ssl/src/: main.rs
mesh/: pyproject.toml
mesh/examples/: test_closure.ion  test_closure_multi.ion  test_closure_simple.ion  test_ffi_bindings.ion  test_simple_ffi.ion
mesh/src/: ast_nodes.py  codegen.py  e  ffi_bindings.json  ffi_bindings.py  layout.py  main.py  name_resolution.py  parser.py  test_area.ion  typed_ast.py
python-ionvm/: Cargo.toml  README.md  pyproject.toml  setup.py  test_python.ionpack
python-ionvm/examples/: actors.py  complex_object.py  complex_python.ionpack  hello_python.ionpack  hello_world.py  improved_control_flow_demo.py  python_actors.ionpack  test_ionc.py  test_library.py
python-ionvm/ionvm/: __init__.py  bytecode.py  control_flow.py  function.py  instruction.py  instruction_fixed.py  ionpack.py  pattern.py  value.py
python-ionvm/src/: lib.rs
src/: env.rs  inst.rs  inst.rs~  lib.rs  lib.rs~  repl.rs  repl.rs~  value.rs  vm.rs  vm.rs~
vm-ffi/: Cargo.toml
vm-ffi/src/: bridge.rs  lib.rs  rust_ffi.rs
vm-ffi/src/stdlib/: io.rs  math.rs  mod.rs  string.rs
vmm/: Cargo.toml
vmm/src/: bytecode_binary.rs  bytecode_text.rs  ffi_integration.rs  instruction.rs  integration_tests.rs  ionpack.rs  lib.rs  value.rs  vm.rs  vm_timeout_tests.rs
vmm/src/value/: mod.rs  object.rs  process.rs  property.rs
vmm/src/vm/: mod.rs  scheduler.rs  timeout.rs
vmm/src/vm/ops/: actor.rs  arithmetic.rs  comparison.rs  control.rs  misc.rs  mod.rs  object.rs
