[package]
name = "ionvm"
version = "0.1.0"
authors = ["Prabhakar Dev <ayushashi11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta"
rustyline="6.1.2"
rustyline-derive = "0.3.1"
env_logger = "0.7.1"
