[package]
name = "ionvm"
version = "0.1.0"
authors = ["Prabhakar Dev <ayushashi11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.2"
rustyline="6.2.0"
rustyline-derive = "0.3.1"
env_logger = "0.7.1"
