[package]
name = "ionvm"
version = "0.1.0"
authors = ["Prabhakar Dev <ayushashi11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.5"
rustyline="9.1.0"
rustyline-derive = "0.5.0"
env_logger = "0.9.0"
