[project]
name = "mesh"
version = "0.1.0"
description = ""
authors = [
    {name = "Prabhakar Dev",email = "ayushashi11@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "lark (>=1.3.1,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
